# nixe

./: Cargo.toml  flake.nix  readme.md  shell.nix
src/: main.rs
