[package]
name = "nixe"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.8", features = ["macros"] }
tokio = { version = "1.49.0", features = ["rt-multi-thread"] }
tower-http = { version = "0.6.8", features = ["fs", "trace"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "fmt"] }
